<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="390dp"
        android:layout_height="490dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/setting_bg">

        <ImageView
            android:id="@+id/close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/close"
            android:contentDescription="@string/btnClose"/>

        <ImageView
            android:id="@+id/music_on"
            android:layout_width="95dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="60dp"
            android:layout_marginTop="125dp"
            android:background="@drawable/on"
            android:contentDescription="@string/btnmusicOn"/>

        <ImageView
            android:id="@+id/music_off"
            android:layout_width="95dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="60dp"
            android:layout_marginTop="125dp"
            android:background="@drawable/off"
            android:visibility="invisible"
            android:contentDescription="@string/btnmusicOff"/>

        <ImageView
            android:id="@+id/sounds_on"
            android:layout_width="95dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="60dp"
            android:layout_marginTop="203dp"
            android:background="@drawable/on"
            android:contentDescription="@string/btnSoundOn"/>

        <ImageView
            android:id="@+id/sounds_off"
            android:layout_width="95dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="60dp"
            android:layout_marginTop="203dp"
            android:background="@drawable/off"
            android:visibility="invisible"
            android:contentDescription="@string/btnSoundOff"/>

    </RelativeLayout>

</RelativeLayout>