<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/settings"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:background="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/btnSettings"
        android:importantForAccessibility="no"
        android:outlineAmbientShadowColor="#CCCCCC"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinButton"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/minusButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/minus"
                    android:contentDescription="@string/btnMinus"
                    android:importantForAccessibility="no"
                    android:outlineAmbientShadowColor="#CCCCCC"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bet" />

                <TextView
                    android:id="@+id/bet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="17dp"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_jackpot"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/plusButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/plus"
                    android:contentDescription="@string/btnPlus"
                    android:importantForAccessibility="no"
                    android:outlineAmbientShadowColor="#CCCCCC"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/spinButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/spin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/btnPlay"/>

</LinearLayout>